src/content/docs/sdk/react-native/v4/features/short-links.mdx
---
title: Resolve short branded links
description: Resolve short links that were created in Campaign Lab.
slug: en/sdk/react-native/v4/features/short-links
---

Adjust's [link shortener solution](https://help.adjust.com/en/article/short-branded-links) converts your complex and long links into cleaner and shorter links. The shortened links retain deep link and campaign information, and route users to the app store, if they don't have your app installed.

Use the method described in this section to resolve your short links.

## Set up deep linking in the Adjust SDK {#set-up-deep-linking-in-the-adjust-sdk}

In the Adjust SDK, add support for the following:

-  [URI schemes](/en/sdk/react-native/features/deep-links)
-  [Deferred deep linking](/en/sdk/react-native/features/deep-links#deferred-deep-linking)

<Callout type="note">

You don't need to set up LinkMe or Link resolution to use Adjust’s link shortener solution.

</Callout>

## Set up the Adjust SDK to resolve short links {#set-up-the-adjust-sdk-to-resolve-short-links}

<CodeBlock title="Method signature">

```ts
processDeeplink: (deeplink: string, callback: (resolvedLink: string) => void) => void
```

</CodeBlock>

Call the `processDeeplink` method to resolve a short Adjust link URL that deep linked users into your app.

```ts
Adjust.processDeeplink("your-deeplink", function (resolvedLink) {
   console.log("Resolved link: " + resolvedLink);
});
```

In case the link you sent to `processDeeplink` method was shortened, `resolvedLink` returns the extended original link. In case the link you passed to the method wasn't shortened, then `resolvedLink` contains the same link you have passed.
